// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders when there are multiple items 1`] = `
<div>
  <div
    className="products"
  >
    <h1>
      Earth
    </h1>
  </div>
  <div
    className="products"
  >
    <h1>
      mango
    </h1>
  </div>
  <div
    className="products"
  >
    <h1>
      Moon
    </h1>
  </div>
  <div
    className="products"
  >
    <h1>
      Saturn
    </h1>
  </div>
</div>
`;

exports[`renders when there are no items 1`] = `
<div>
  No items found
</div>
`;

exports[`renders when there is one item 1`] = `
<div>
  <div
    className="products"
  >
    <h1>
      Mango
    </h1>
  </div>
</div>
`;
